--- a/view/src/sass/style.scss
+++ b/view/src/sass/style.scss
@@ -9,6 +9,66 @@
     background-color: #c9c9c9;
 }
 
+.modal {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 1;
+
+    .modal__container {
+        background-color: #fff;
+        position: absolute;
+        width: 50%;
+        padding-bottom: 16px;
+        border-radius: 5px;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+
+        @media only screen and (max-width: 620px) {
+            width: 85%;
+        }
+
+        .modal__head {
+            border-bottom: 2px solid #c9c9c9;
+            padding: 8px 16px;
+            margin-bottom: 16px;
+        }
+
+        .modal__body {
+            text-align: center;
+        }
+    }
+}
+
+.holder--code {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 32px;
+
+    input {
+        width: 10%;
+        text-align: center;
+        margin: 0 5px;
+        appearance: textfield;
+
+        &::-webkit-outer-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+
+        &::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+
+    }
+}
+
 .nav {
     background-image: linear-gradient(to right bottom, #9808ab, #7f46c8, #5f65db, #3a7de7, #1292eb);
     padding: 8px 16px;
