table customized, delete method server side changed

--- a/view/src/sass/style.scss
+++ b/view/src/sass/style.scss
@@ -1,283 +1,11 @@
+@import 'variables'; 
+@import 'components';
+@import 'form';
+@import 'holders';
+@import 'modifiers';
+
 * {
     margin: 0 0;
     padding: 0 0;
     box-sizing: border-box;
-}
-
-.container {
-    min-height: 100vh;
-    background-color: #c9c9c9;
-}
-
-.holder--list {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    max-height: calc(100vh - 45px);
-
-    @media only screen and (max-width: 620px) {
-        flex-direction: column;
-    }
-
-    .aside {
-        width: 250px;
-        max-height: calc(100vh - 45px);
-        background-color: #7f46c8;
-        position: relative;
-
-        @media only screen and (max-width: 620px) {
-            width: 100%;
-        }
-
-        .product {
-            padding: 8px;
-            color: #fff;
-            text-shadow: 0 0 1px rgba(0, 0, 0, 0.8);
-
-            .product__description {
-                margin: 4px 0;
-                display: flex;
-                flex-direction: row;
-                text-transform: capitalize;
-                justify-content: space-between;
-                color: #ccc;
-            }
-
-            .product__title {
-                display: flex;
-                justify-content: space-between;
-                text-transform: capitalize;
-
-                span {
-                    font-size: 0.7rem;
-
-                    &:hover {
-                        cursor: pointer;
-                        opacity: 0.6;
-                    }
-                }
-            }
-        }
-    }
-}
-
-.holder--product {
-    max-height: calc(100% - 33px);
-    overflow-y: auto;
-    scrollbar-width: none;
-}
-
-.holder--product::-webkit-scrollbar-track {
-    appearance: none;
-}
-
-.modal {
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.7);
-    z-index: 1;
-
-    .modal__container {
-        background-color: #fff;
-        position: absolute;
-        width: 30%;
-        padding-bottom: 16px;
-        border-radius: 5px;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-
-        @media only screen and (max-width: 620px) {
-            width: 85%;
-        }
-
-        .modal__head {
-            border-bottom: 2px solid #c9c9c9;
-            padding: 8px 16px;
-            margin-bottom: 16px;
-        }
-
-        .modal__body {
-            text-align: center;
-        }
-    }
-}
-
-.holder--code {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin-bottom: 32px;
-
-    input {
-        width: 10%;
-        text-align: center;
-        margin: 0 5px;
-        appearance: textfield;
-
-        &::-webkit-outer-spin-button {
-            -webkit-appearance: none;
-            margin: 0;
-        }
-
-        &::-webkit-inner-spin-button {
-            -webkit-appearance: none;
-            margin: 0;
-        }
-
-    }
-}
-
-.nav {
-    background-color: #7f46c8;
-    padding: 8px 16px;
-    text-shadow: 0 0 1px rgba(0, 0, 0, 0.8);
-    box-shadow: 0 2px 5px 5px rgba(0, 0, 0, 0.125);
-
-    .nav__title {
-        font-weight: bold;
-        font-size: 24px;
-    }
-
-    .nav__list {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        list-style: none;
-        padding: 0 16px;
-
-        a {
-            text-decoration: none;
-            color: #fff;
-        }
-
-        li {
-            flex-grow: 1;
-        }
-
-        @media only screen and (max-width: 620px) {
-            flex-direction: column;
-            align-items: flex-start;
-            padding: 0 0;
-        }
-    }
-}
-
-.small-text-middle {
-    line-height: 24px;
-}
-
-.text-right {
-    text-align: right;
-}
-
-.text-danger {
-    color: #b81111;
-}
-
-.holder--404 {
-    width: 85%;
-    margin: 0 auto;
-    text-align: center;
-
-    img {
-        width: 40%;
-    }
-}
-
-.form {
-    margin: 16px auto;
-    padding: 32px;
-    width: 350px;
-    background-color: #fff;
-    border-radius: 5px;
-
-    @media only screen and (max-width: 620px) {
-        width: 100vw;
-        border-radius: 0;
-    }
-}
-
-.form__title {
-    margin-bottom: 32px;
-    text-align: center;
-    color: #333;
-    text-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
-}
-
-.form__holder--input {
-    display: flex;
-    flex-direction: column;
-    margin: 16px 0;
-
-    input {
-        margin: 10px 0;
-        flex-grow: 1;
-    }
-
-    select {
-        background-color: #fff;
-        appearance: none;
-        -webkit-appearance: none;
-    }
-}
-
-.form__input {
-    border: none;
-    padding: 8px;
-    border-bottom: 1px solid #333;
-    transition: 0.4s;
-
-    &:focus {
-        border-bottom-color: #9808ab;
-    }
-}
-
-.button {
-    padding: 8px 16px;
-    border: none;
-    background-color: #333;
-    color: #fff;
-    font-weight: 600;
-    transition: 0.3s;
-
-    &:hover {
-        cursor: pointer;
-        background-color: #333;
-    }
-}
-
-.button--blue {
-    background-color: #18528f;
-}
-
-.button--purple {
-    background-color: #9808ab;
-}
-
-.button--red {
-    background-color: #b81111;
-}
-
-.button--small {
-    padding: 8px 16px;
-}
-
-.button--large {
-    padding: 16px 32px;
-}
-
-.button--full {
-    width: 100%;
-}
-
-.anchor {
-    text-decoration: none;
-    color: #18528f;
-    display: block;
-    font-size: small;
-    margin: 16px 0;
 }
