--- a/view/src/sass/_components.scss
+++ b/view/src/sass/_components.scss
@@ -122,7 +122,7 @@
         transform: translate(-50%, -50%);
 
         @media only screen and (max-width: $mobile) {
-            width: 85%;
+            width: 90%;
         }
 
         .modal__head {
@@ -203,3 +203,143 @@
         cursor: pointer;
     }
 }
+
+.about {
+    display: flex;
+    flex-direction: row;
+    padding: 16px 8px;
+    gap: 16px;
+
+    section {
+        display: flex;
+        flex-direction: column;
+        flex-basis: 65%;
+    }
+
+    .form {
+        max-height: 500px;
+
+        button {
+            width: 100%;
+        }
+    }
+
+    @media only screen and (max-width: $mobile) {
+        flex-direction: column;
+
+        .form {
+            width: 100%;
+        }
+    }
+}
+
+.content {
+    background-color: $light;
+    padding: 32px;
+    border-radius: 5px;
+    box-shadow: 0 10px 10px 5px rgba(0, 0, 0, 0.125);
+    margin-bottom: 16px;
+    position: relative;
+
+    .content__title {
+        margin-bottom: 8px;
+    }
+
+    .content__img {
+        text-align: center;
+        padding: 32px;
+
+        img {
+            max-width: 50%;
+
+            @media only screen and (max-width: $mobile) {
+                max-width: 95%;
+            }
+        }
+
+        figcaption {
+            max-width: 50%;
+            background-color: $rainy;
+            font-size: small;
+            margin: 0 auto;
+            color: $purple;
+            padding: 8px;
+
+            @media only screen and (max-width: $mobile) {
+                max-width: 95%;
+            }
+        }
+    }
+
+    ul {
+        list-style: none;
+        padding: 8px;
+    }
+
+    @media only screen and (max-width: $mobile) {
+        width: 100%;
+    }
+}
+
+.toast {
+    visibility: hidden;
+    min-width: 250px;
+    font-size: 0.85rem;
+    color: #fff;
+    text-align: center;
+    border-radius: 2px;
+    padding: 16px;
+    padding-right: 50px;
+    position: fixed;
+    z-index: 1;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 30px;
+}
+
+.loader {
+    color: #ffffff;
+    font-size: 90px;
+    text-indent: -9999em;
+    overflow: hidden;
+    width: 1em;
+    height: 1em;
+    border-radius: 50%;
+    margin: 72px auto;
+    position: relative;
+    transform: translateZ(0);
+    animation: load6 1.7s infinite ease, round 1.7s infinite ease;
+}
+
+@keyframes load6 {
+    0% {
+        box-shadow: 0 -0.83em 0 -0.4em, 0 -0.83em 0 -0.42em, 0 -0.83em 0 -0.44em, 0 -0.83em 0 -0.46em, 0 -0.83em 0 -0.477em;
+    }
+    5%,
+    95% {
+        box-shadow: 0 -0.83em 0 -0.4em, 0 -0.83em 0 -0.42em, 0 -0.83em 0 -0.44em, 0 -0.83em 0 -0.46em, 0 -0.83em 0 -0.477em;
+    }
+    10%,
+    59% {
+        box-shadow: 0 -0.83em 0 -0.4em, -0.087em -0.825em 0 -0.42em, -0.173em -0.812em 0 -0.44em, -0.256em -0.789em 0 -0.46em, -0.297em -0.775em 0 -0.477em;
+    }
+    20% {
+        box-shadow: 0 -0.83em 0 -0.4em, -0.338em -0.758em 0 -0.42em, -0.555em -0.617em 0 -0.44em, -0.671em -0.488em 0 -0.46em, -0.749em -0.34em 0 -0.477em;
+    }
+    38% {
+        box-shadow: 0 -0.83em 0 -0.4em, -0.377em -0.74em 0 -0.42em, -0.645em -0.522em 0 -0.44em, -0.775em -0.297em 0 -0.46em, -0.82em -0.09em 0 -0.477em;
+    }
+    100% {
+        box-shadow: 0 -0.83em 0 -0.4em, 0 -0.83em 0 -0.42em, 0 -0.83em 0 -0.44em, 0 -0.83em 0 -0.46em, 0 -0.83em 0 -0.477em;
+    }
+}
+
+@keyframes round {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+  
