--- a/view/src/sass/_form.scss
+++ b/view/src/sass/_form.scss
@@ -45,3 +45,16 @@
         border-bottom-color: $purple;
     }
 }
+
+.form__textarea {
+    display: block;
+    width: 100%;
+    resize: none;
+    margin-bottom: 16px;
+    padding: 8px;
+    border: 3px dashed $off;
+
+    &:focus {
+        border-color: $purple;
+    }
+}
