--- a/view/src/sass/_modifiers.scss
+++ b/view/src/sass/_modifiers.scss
@@ -61,3 +61,35 @@
 .slide--down {
     display: block;
 }
+
+.toast--danger {
+    visibility: visible;
+    animation: fadein 0.5s ease-in, fadeout forwards 0.5s 2.5s;
+    background-color: $bloody;
+    background-image: url('../images/danger.png');
+    background-repeat: no-repeat;
+    background-size: 32px;
+    background-position-x: 95%;
+    background-position-y: 50%;
+}
+
+.toast--success {
+    visibility: visible;
+    animation: fadein 0.5s ease-in, fadeout forwards 0.5s 2.5s;
+    background-color: $hope;
+    background-image: url('../images/check.png');
+    background-repeat: no-repeat;
+    background-size: 32px;
+    background-position-x: 95%;
+    background-position-y: 50%;
+}
+
+@keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+}
+
+@keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+}
